--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,6 +20,7 @@
         gap: 0;
         flex-direction: column;
         background-color: #262626;
+        opacity: 0.4;
         width: 100%;
         text-align: center;
         transition: 0.3s;
