--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ a {
 
 .inputClass {
     border: 2px solid yellow;
+    max-width: 200px;
+    width: 100%;
+    height: 30px;
 }
 
 .inputClass:focus::placeholder {
@@ -79,4 +82,9 @@ a {
     padding: 15px;
     list-style-type: circle;
     margin-top: 20px;
+}
+
+
+.new-li {
+    margin-top: 10px;
 }
